style: fix alert dialog z-index when the alertdialog is open

--- a/src/stylesheets/reset.css
+++ b/src/stylesheets/reset.css
@@ -43,7 +43,12 @@ body:has(div[role='dialog']) {
 }
 
 /* Ensure that pointer events are reset if a refresh occurs while the modal is active */
-body:not(:has(div[role='dialog'])) {
+body:has(div[role='alertdialog']) header {
+  z-index: 50;
+}
+
+/* Ensure that the navigation bar alert dialog stays underneath the asset dialog */
+body:has(div[role='dialog']) {
   pointer-events: initial !important;
 }
 
